--- a/src/assets/sass/fonts/_fonts.scss
+++ b/src/assets/sass/fonts/_fonts.scss
@@ -15,6 +15,15 @@
         src: url(../fonts/manrope-extra-bold.ttf);
     }
 
+
+    @font-face {
+        font-family: 'manrope-semi-bold';
+        font-style: normal;
+        font-weight: 500;
+        font-display: swap;
+        src: url(../fonts/manrope-semi-bold.ttf);
+    }
+
     @font-face {
         font-family: 'manrope-light';
         font-style: normal;
